--- a/Documents/NetBeansProjects/Wirahman_Husain/build.xml
+++ b/Documents/NetBeansProjects/Wirahman_Husain/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Wirahman_Husain" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Wirahman_Husain.</description>
+<project name="Rizki_Harinda" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Rizki_Harinda.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Wirahman_Husain-impl.jar">
+        <target name="run" depends="Rizki_Harinda-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
